_generated-doc/2.7/config/quarkus-opentelemetry-tracer-exporter-jaeger-jaeger-exporter-config-jaeger-exporter-runtime-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-opentelemetry-tracer-exporter-jaeger-jaeger-exporter-config-jaeger-exporter-runtime-config_configuration]]link:#quarkus-opentelemetry-tracer-exporter-jaeger-jaeger-exporter-config-jaeger-exporter-runtime-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-opentelemetry-tracer-exporter-jaeger-jaeger-exporter-config-jaeger-exporter-runtime-config_quarkus.opentelemetry.tracer.exporter.jaeger.endpoint]]`link:#quarkus-opentelemetry-tracer-exporter-jaeger-jaeger-exporter-config-jaeger-exporter-runtime-config_quarkus.opentelemetry.tracer.exporter.jaeger.endpoint[quarkus.opentelemetry.tracer.exporter.jaeger.endpoint]`

[.description]
--
The Jaeger endpoint to connect to. The endpoint must start with either http:// or https://.
--|string 
|


a| [[quarkus-opentelemetry-tracer-exporter-jaeger-jaeger-exporter-config-jaeger-exporter-runtime-config_quarkus.opentelemetry.tracer.exporter.jaeger.export-timeout]]`link:#quarkus-opentelemetry-tracer-exporter-jaeger-jaeger-exporter-config-jaeger-exporter-runtime-config_quarkus.opentelemetry.tracer.exporter.jaeger.export-timeout[quarkus.opentelemetry.tracer.exporter.jaeger.export-timeout]`

[.description]
--
The maximum amount of time to wait for the collector to process exported spans before an exception is thrown. A value of `0` will disable the timeout: the exporter will continue waiting until either exported spans are processed, or the connection fails, or is closed for some other reason.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`10S`

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
